[package]
name = "axum-named-routes"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false }
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.5", features = ["http1"] }
tokio = { version = "1", features = ["full"] }
