[package]
name = "axum-named-routes"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A Router for axum that allows routes to be named"
repository = "https://github.com/Atrociously/axum-named-routes"
readme = "README.md"

[features]
default = ["tokio"]
tokio = ["axum/tokio"]

[dependencies]
axum = { version = "0.6", default-features = false }
futures = { version = "0.3", default-features = false }
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.6", features = ["http1"] }
tokio = { version = "1", features = ["full"] }
